--- a/02-state-manager/01-index.html
+++ b/02-state-manager/01-index.html
@@ -11,3 +11,19 @@
     <input type="number" name="" id="">
 </body>
 </html>
+
+<!-- 
+
+    function spinnerReducer(currentState = 100, action){
+        if (action.type === 'INCREMENT') return currentState + 1;
+        if (action.type === 'DECREMENT') return currentState - 1;
+        return currentState;
+    }
+    const store = StateManager.createStore(spinnerReducer)
+    const inc_action = { type : 'INCREMENT' },
+        dec_action = { type : 'DECREMENT' };
+    store.subscribe(() => console.log('current state = ', store.getState()))
+    store.dispatch(dec_action)
+    store.dispatch(inc_action)
+
+ -->
