--- a/02-state-manager/01-index.html
+++ b/02-state-manager/01-index.html
@@ -6,9 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="state-manager.js"></script>
+    <script src="react.development.js"></script>
+    <script src="react-dom.development.js"></script>
+    <script src="babel.min.js"></script>
+    <script type="text/babel">
+        function spinnerReducer(currentState = 100, action){
+            if (action.type === 'INCREMENT') return currentState + 1;
+            if (action.type === 'DECREMENT') return currentState - 1;
+            return currentState;
+        }
+        const store = StateManager.createStore(spinnerReducer)
+        const inc_action = { type : 'INCREMENT' },
+            dec_action = { type : 'DECREMENT' };
+            
+        /* store.subscribe(() => console.log('current state = ', store.getState()))
+        store.dispatch(dec_action)
+        store.dispatch(inc_action) */
+        const Spinner = () => {
+            return (
+                <div>
+                    <h3>Spinner</h3>
+                    <hr />
+                    <button>Decrement</button>
+                    <span> [ 0 ] </span>
+                    <button>Increment</button>
+                </div>
+            )
+        }
+        ReactDOM.render(<Spinner/>, document.getElementById('root'))
+    </script>
 </head>
 <body>
-    <input type="number" name="" id="">
+    <div id="root">
+        
+    </div>
 </body>
 </html>
 
