--- a/02-state-manager/07-index.html
+++ b/02-state-manager/07-index.html
@@ -16,6 +16,7 @@
         04. simplify passing the "action creators" to the component (part-1)
         05. simplify passing the "action creators" to the component (part-2)
         06. intruducing "action dispatchers" (get the action from the action creator and dispatch the action)
+        07. generalizing the "bindActionCreators"
      -->
     <script type="text/babel">
         function spinnerReducer(currentState = 100, action){
@@ -57,16 +58,13 @@
         }
 
         function bindActionCreators(actionCreators, dispatch) {
-            const actionDispatchers = {
-                decrement() {
-                    const action = actionCreators.decrement();
-                    dispatch(action);
-                },
-                increment() {
-                    const action = actionCreators.increment();
+            const actionDispatchers = {};
+            for (let key in actionCreators) {
+                actionDispatchers[key] = (...args) => {
+                    const action = actionCreators[key](...args);
                     dispatch(action);
                 }
-            };
+            }
             return actionDispatchers;
         }
 
