--- a/02-state-manager/11-bank-account-redux.html
+++ b/02-state-manager/11-bank-account-redux.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="state-manager.js"></script>
+    <script src="redux.js"></script>
     <script src="react.development.js"></script>
     <script src="react-dom.development.js"></script>
     <script src="babel.min.js"></script>
@@ -33,8 +33,8 @@
             }
         }
 
-        const store = StateManager.createStore(bankAccountReducer);
-        const bankAccountActionDispatchers = StateManager.bindActionCreators(bankAccountActions, store.dispatch);
+        const store = Redux.createStore(bankAccountReducer);
+        const bankAccountActionDispatchers = Redux.bindActionCreators(bankAccountActions, store.dispatch);
 
         const BankAccount = ({balance, deposit, withdraw, bankrupt}) => {
             const [amount, setAmount] = React.useState(0)
